--- a/hadoop-docker/docker-compose.yml
+++ b/hadoop-docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         - ./config
       deploy:
         mode: replicated
-        replicas: 3
+        replicas: 4
             
    resourcemanager:
       image: apache/hadoop:3.3.6
@@ -27,10 +27,13 @@ services:
       env_file:
         - ./config
       volumes:
-        - ./wordcount:/opt/hadoop/wordcount
+        - ./workspace:/opt/hadoop/workspace
    nodemanager:
       image: apache/hadoop:3.3.6
       command: ["yarn", "nodemanager"]
       env_file:
         - ./config
+      deploy:
+        mode: replicated
+        replicas: 4
 
