--- a/vagrant-vm/Vagrantfile
+++ b/vagrant-vm/Vagrantfile
@@ -15,6 +15,7 @@ Vagrant.configure("2") do |config|
   # Puertos expuestos
   config.vm.network "forwarded_port", guest: 8080, host: 8080
   config.vm.network "forwarded_port", guest: 5000, host: 5000
+  config.vm.network "forwarded_port", guest: 9000, host: 9000
   config.vm.network "forwarded_port", guest: 9870, host: 9870
   config.vm.network "forwarded_port", guest: 8088, host: 8088
 
